# chess-r

./: Cargo.toml
.github/workflows/: rust.yml
src/: bitboard.rs  board.rs  main.rs  move.rs  rules.rs  ui.rs
src/opponents/: mod.rs
