[package]
name = "chess-r"
version = "0.9.2"
edition = "2021"
authors = ["3500pts"]

[dependencies]
bitvec = "1.0.1"
chrono = "0.4.40"
ggez = { git = "https://github.com/3500Pts/ggez.git"}
rand = "0.9.1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
